// define proto using proto3 syntax.
syntax = "proto3";
// package name for the generated Java file
option java_package = "edu.alibaba.mpc4j.common.rpc.impl.netty.protobuf";
// class name for the generated Java file
option java_outer_classname = "NettyRpcProtobuf";

message DataPacketProto {
    // data packet contains 3 types: head, type, payload, defined by HeaderProto, TypeProto, PayloadProto, respectively.
    HeaderProto headerProto = 1;
    TypeProto typeProto = 2;
    PayloadProto payloadProto = 3;

    // define header
    message HeaderProto {
        // encode task ID
        int64 encodeTaskId = 1;
        // protocol ID
        int32 ptoId = 2;
        // step ID
        int32 stepId = 3;
        // extra information
        int64 extraInfo = 4;
        // sender ID
        int32 senderId = 5;
        // receiver ID
        int32 receiverId = 6;
    }

    // define type
    message TypeProto {
        // type ID
        int32 typeId = 1;
    }

    // define payload
    message PayloadProto {
        // repeated means having multiple instance (like array)
        repeated bytes payloadBytes = 1;
    }
}